# dog

./: Cargo.toml  README.md  example.txt  mk-outs.sh
src/: lib.rs  main.rs
tests/: cli.rs
tests/expected/: all.e.out  the-bustle.txt.e.stdin.out
